--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,7 +49,11 @@
         "streambuf": "cpp",
         "cinttypes": "cpp",
         "typeinfo": "cpp",
-        "sdl.h": "c"
+        "sdl.h": "c",
+        "any": "cpp",
+        "bitset": "cpp",
+        "map": "cpp",
+        "set": "cpp"
     },
     "C_Cpp.errorSquiggles": "Disabled"
 }
